# Follow-delay

./: CMakeLists.txt  HOW_TO_BUILD.md  README.md
.github/workflows/: main.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  build.yml
Source/dsp/: AdaptiveFitEngine.h  DelayEngine.h  FeedbackToneBlock.h  MotionPlaybackEngine.h
Source/midi/: MidiGestureCapture.h  TriggerEngine.h
Source/model/: FractalMotionGenerator.h  MotionGraphModel.h  StateSerializer.h
Source/ui/: FollowDelayLookAndFeel.h  MotionGraphComponent.h
Source/util/: Constants.h  DataStructures.h  ParameterLayoutFactory.h  SafeSmoother.h
